--- a/style.css
+++ b/style.css
@@ -84,6 +84,13 @@ h3 {
     font-size: 0.87rem;
 }
 
+hr {
+    border: 0.02rem solid var(--color-info-light);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
 
 img {
     display: block;
@@ -206,10 +213,6 @@ main::-webkit-scrollbar {
     display: none;
 }
 
-main .search {
-    position: fixed;
-    top: 10;
-}
 
 main .search input {
     height: 3rem;
@@ -228,6 +231,7 @@ main .search button {
     color: var(--color-white);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
+    font-weight: 600;
 }
 
 main .search button:hover {
@@ -248,11 +252,14 @@ main .post:hover {
     box-shadow: none;
 }
 
+
+
 main .post .top {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
+
 
 main .post .top img {
     height: 2rem;
@@ -297,6 +304,116 @@ main .post .bottom button {
     transition: all 300ms ease;
 }
 
+.appPopup {
+    width: 400px;
+    background: var(--color-background);
+    border-radius: var(--border-radius-2);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+    box-shadow: var(--box-shadow);
+}
+
+.appPopup h2 {
+    color: var(--color-dark);
+    margin: 1rem;
+}
+
+.open-appPopup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.appPopup button {
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    background: var(--color-danger);
+    color: var(--color-background);
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.loginPopup {
+    width: 400px;
+    background: var(--color-background);
+    border-radius: var(--border-radius-2);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+    box-shadow: var(--box-shadow);
+}
+
+.open-loginPopup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.loginPopup h2 {
+    margin: 1rem;
+}
+
+.loginPopup input {
+    width: 100%;
+    margin: 0.5rem 0;
+    height: 3rem;
+    padding-left: 15px;
+    background: var(--color-info-light);
+    border-radius: var(--border-radius-2);
+}
+
+.loginPopup button {
+    width: 100%;
+    margin: 1rem 0;
+    height: 3rem;
+    font-size: 1rem;
+    background: var(--color-danger);
+    color: var(--color-background);
+    border-radius: var(--border-radius-2);
+    font-weight: 600;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+
+.loginPopup button:last-child {
+    background-color: var(--color-info-light);
+    color: var(--color-dark);
+    width: 20%;
+    font-size: 0.87rem;
+    height: 2rem;
+}
+
+.loginPopup button:hover {
+    cursor: pointer;
+    box-shadow: none;
+}
+
+.blur-filter {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
+
 main .post .bottom button:hover {
     box-shadow: none;
     cursor: pointer;
@@ -320,9 +437,27 @@ main .post .bottom button span:hover {
     gap: 2rem;
 }
 
-
 .right .top button {
-    display: none;
+    height: 3rem;
+    font-size: 0.87rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    background: var(--color-danger);
+    border-radius: var(--border-radius-1);
+    color: var(--color-background);
+    font-weight: 600;
+    box-shadow: var(--box-shadow);
+}
+
+.right .top button:first-child {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.right .top button:hover {
+    box-shadow: none;
+    cursor: pointer;
 }
 
 .right .theme-toggler {
@@ -378,8 +513,19 @@ main .post .bottom button span:hover {
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
     padding: 1rem;
+    overflow: auto;
+    height: 600px;
+    scroll-behavior: smooth;
 }
 
+.right .recent-updates .updates::-webkit-scrollbar {
+    width: 5px;
+}
+
+.right .recent-updates .updates::-webkit-scrollbar-thumb {
+    background-color: var(--color-info-dark);
+    border-radius: 20px;
+}
 
 .right .recent-updates .updates:hover {
     box-shadow: none;
