--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@
     --color-light: rgba(132, 139, 200, 0.18);
     --color-primary: #5296dd;
     --color-blue: #92bddf;
-    --color-danger: #ff6314;
+    --color-reddit: #ff6314;
     --color-success: #41f1b6;
     --color-warning: #ffbb55;
+    --color-danger: #BE3144;
 
     --card-border-radius: 2rem;
     --border-radius-1: 0.4rem;
@@ -85,7 +86,7 @@ h3 {
 }
 
 hr {
-    border: 0.02rem solid var(--color-info-light);
+    border: 0.02rem solid var(--color-info-dark);
     margin-top: 1rem;
     margin-bottom: 1rem;
     width: 100%;
@@ -121,8 +122,8 @@ b {
     color: var(--color-primary);
 }
 
-.danger {
-    color: var(--color-danger);
+.reddit {
+    color: var(--color-reddit);
 }
 
 aside {
@@ -178,7 +179,7 @@ aside .sidebar a span {
 
 aside .sidebar a.active {
     background: var(--color-light);
-    color: var(--color-danger);
+    color: var(--color-reddit);
     margin-left: 0;
 }
 
@@ -186,16 +187,16 @@ aside .sidebar a.active:before {
     content: "";
     width: 6px;
     height: 100%;
-    background: var(--color-danger);
+    background: var(--color-reddit);
 }
 
 aside .sidebar a.active span {
-    color: var(--color-danger);
+    color: var(--color-reddit);
     margin-left: calc(1rem - 3px);
 }
 
 aside .sidebar a:hover {
-    color: var(--color-danger);
+    color: var(--color-reddit);
 }
 
 aside .sidebar a:hover span {
@@ -227,7 +228,7 @@ main .search button {
     height: 3rem;
     width: 5rem;
     border-radius: var(--border-radius-1);
-    background: var(--color-danger);
+    background: var(--color-reddit);
     color: var(--color-white);
     box-shadow: var(--box-shadow);
     transition: all 300ms ease;
@@ -335,7 +336,7 @@ main .post .bottom button {
     width: 100%;
     margin-top: 50px;
     padding: 10px 0;
-    background: var(--color-danger);
+    background: var(--color-reddit);
     color: var(--color-background);
     border: 0;
     outline: none;
@@ -385,7 +386,7 @@ main .post .bottom button {
     margin: 1rem 0;
     height: 3rem;
     font-size: 1rem;
-    background: var(--color-danger);
+    background: var(--color-reddit);
     color: var(--color-background);
     border-radius: var(--border-radius-2);
     font-weight: 600;
@@ -394,8 +395,8 @@ main .post .bottom button {
 }
 
 .loginPopup button:last-child {
-    background-color: var(--color-info-light);
-    color: var(--color-dark);
+    background-color: var(--color-danger);
+    color: var(--color-background);
     width: 20%;
     font-size: 0.87rem;
     height: 2rem;
@@ -424,7 +425,7 @@ main .post .bottom button span {
 }
 
 main .post .bottom button span:hover {
-    color: var(--color-danger);
+    color: var(--color-reddit);
 }
 
 .right {
@@ -442,7 +443,7 @@ main .post .bottom button span:hover {
     font-size: 0.87rem;
     padding: 1rem;
     box-sizing: border-box;
-    background: var(--color-danger);
+    background: var(--color-reddit);
     border-radius: var(--border-radius-1);
     color: var(--color-background);
     font-weight: 600;
@@ -536,4 +537,8 @@ main .post .bottom button span:hover {
     grid-template-columns: 2.6rem auto;
     gap: 1rem;
     margin-bottom: 1rem;
+}
+
+.right .recent-updates .updates .update:hover {
+    cursor: pointer;
 }
